--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -6,7 +6,7 @@
   "rate": "تقييم",
   "description": "وصف",
   "photo Gallery": "معرض الصور",
-  "show on map": "عرض على الخريطة",
+  "show on map": "انظر على الخريطة",
   "inclusion": "المزايا المشمولة",
   "why book this trip ?": "لماذا تحجز هذه الرحلة ؟",
   "book Trip": "احجز الرحلة",
@@ -15,7 +15,7 @@
   "place": "مكان ",
   "company": "شركة",
   "/ Person": "/ شخص",
-  "hot Deals": "لا تفوت",
+  "don't miss": "لا تفوت",
   "discover exclusive offers \nfrom top companies tailored just for you": "اكتشف العروض الحصرية \nمن أفضل الشركات المصممة خصيصًا لك",
   "recommendation": "توصية",
   "view All": "عرض الكل",
