--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,7 +6,7 @@
   "rate": "rate",
   "description": "Description",
   "photo Gallery": "Photo Gallery",
-  "show on map": "Show on map",
+  "show on map": "See on map",
   "inclusion": "Inclusion",
   "why book this trip ?": "Why book this trip ?",
   "book Trip": "Book Trip",
@@ -15,7 +15,7 @@
   "place": "place",
   "company": "company",
   "/ Person": "/ Person",
-  "hot Deals": "Hot Deals",
+  "don't miss": "Don't Miss",
   "discover exclusive offers \nfrom top companies tailored just for you": "Discover exclusive offers\nfrom top companies tailored just for you",
   "recommendation": "Recommendation",
   "view All": "View All",
